finished user signup

--- a/public/assets/stylesheets/custom.css
+++ b/public/assets/stylesheets/custom.css
@@ -138,3 +138,43 @@ td.sidebar {
 div.field , div.action {
 	margin-bottom: 10px;
 }
+
+/*error messages*/
+
+#errors_description {
+	width: 400px;
+	border:2px solid red;
+	padding: 7px;
+	padding-bottom: 12px;
+	margin-bottom: 20px;
+	background-color: #f0f0f0;
+}
+
+#errors_description h2 {
+	text-align: left;
+	font-weight: bold;
+	padding: 5px 5px 5px 15px;
+	font-size: 12px;
+	margin: -7px;
+	background-color: #c00;
+	color: #fff;
+}
+
+
+#errors_description p {
+	padding: 5px;
+	margin-bottom: 0;
+	color: #333;
+}
+
+
+
+#errors_description ul li {
+	font-size: 12px;
+	list-style: square;
+}
+
+.field_with_errors label {
+	color: #fff;
+	background-color: red;
+}
