--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Sign Up</h1>
+<%= render 'shared/error_messages' %>
 <%= form_for @user do |f| %>
 	<div class="field">
 		<%= f.label :name %> </br>
@@ -14,7 +15,7 @@
 	</div>
 	<div class="field">
 		<%= f.label :password_confirmation , "Confirmation" %> </br>
-		<%= f.text_field :password_confirmation %>
+		<%= f.password_field :password_confirmation %>
 	</div>
 	<div class="action">
 		<%= f.submit "Sign Up" %>
