--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Users</h1>
 
-
+<%= will_paginate @users %>
 <ul class="users">
 	<% @users.each do |user| %>
 	<li>
@@ -9,3 +9,4 @@
 	</li>
 	<% end %>
 </ul>
+<%= will_paginate @users %>
