--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,6 @@
 
 <%= will_paginate @users %>
 <ul class="users">
-	<% @users.each do |user| %>
-	<li>
-		<%= gravatar_for_user user , :size => 30 %>
-		<%= link_to user.name , user_path(user.id) %>
-	</li>
-	<% end %>
+	<%= render @users  %>
 </ul>
 <%= will_paginate @users %>
