--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,9 @@
 	<li>
 		<%= gravatar_for_user user , :size => 30 %>
 		<%= link_to user.name , user_path(user.id) %>
+		<% if current_user.admin?  %>
+		|
+		<%= link_to "delete" , user , :method => :delete , :confirm => "Are u shure?" ,
+			:title => "Delete #{user.name}" %>
+		<% end %>
 	</li>
