--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,8 @@
 			<ul>
 				<li><%= link_to "About", about_path %></li>
 				<li><%= link_to "Contact", contact_path %></li>
-				<li><%= link_to "News", 'http://news.railstutorial.org' %></li>
-				<li><%= link_to "Rails Tutorial" , 'http://www.railstutorial.org' %></li>
+				<li><%= link_to "News", 'http://www.ynet.co.il' %></li>
+				<li><%= link_to "Tutorial" , 'http://www.railstutorial.org' %></li>
 			</ul>
 		</nav>
 </footer>
