--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
 				<%= gravatar_for_user @user %>
 				<%= @user.name %> 
 			</h1>
+			<%= render 'follow_form' if signed_in? %>
 			<% if @user.microposts.any? %>
 				<table class = "microposts" summary = "showing attributes">
 					<%= render @microposts %>
@@ -18,6 +19,8 @@
 			<strong>URL</strong> <%= link_to user_path(@user) ,@user %>
 			</br>
 			<strong>Microposts</strong>  <%= @user.microposts.count %>
+			<%= render 'shared/stats' %>
 		</td>
+
 	</tr>
 </table>
